--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "illuminate/support": "^9.21|^10.0",
-        "php": "^8.0"
+        "laravel/framework": "^8.0|^9.0",
+        "yoeunes/toastr": "^2.3"
     },
     "license": "MIT",
     "autoload": {
