--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Nabil\\StoreDataRequests\\": "src/"
+            "Nabil\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Nabil\\StoreDataRequests\\StoreDataRequestsServiceProvider"
+                "Nabil\\StoreDataRequestsServiceProvider"
             ]
         }
     },
