--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "Store data to DB by  model from requests fields in form html",
     "type": "library",
     "require": {
-        "illuminate/support": "^9.21|^10.0",
-        "laravel/framework": "^8.0|^9.0",
+        "laravel/framework": "^8.0|^9.0|^10.0",
         "yoeunes/toastr": "^2.3"
     },
     "license": "MIT",
